fix configuaracion apigetaway y rabbit. Se quito la entidad catalogo, nuevo data.sql para crear y poblar la bd. Se ajusto el readme para volver a instanciar todo correctamente.